Fixed episode watched marker not showing after refactoring

--- a/css/main.css
+++ b/css/main.css
@@ -344,8 +344,8 @@ table.light h1 {
   cursor: pointer;
   padding: 10px;
   color: black;
-  max-width: 700px;
-  min-width: 500px;
+  max-width: 94%;
+  min-width: 300px;
   background-color: rgba(255,255,255,0.8);
   width: 100%;
   box-shadow: 4px 4px 2px rgba(255,255,255,0.7)
@@ -726,7 +726,7 @@ ul.engineselect li:hover strong {
   
 }
 
-the-tv-db-search .dropdown-menu, piratebay-search .dropdown-menu, kickass-torrent-search .dropdown-menu {
+the-tv-db-search .dropdown-menu, piratebay-search .dropdown-menu, kickass-torrent-search .dropdown-menu, trakt-tv-search .dropdown-menu {
   padding: 0;
 }
 
